--- a/css_total.css
+++ b/css_total.css
@@ -74,7 +74,7 @@ a #title_img {
 .button a{
     background-color: lavender;
     text-decoration: none;
-    font-family: "Kunstler Script", cursive;
+    font-family: "Kunstler Script", "Brush Script MT", cursive;
     color: #47082C;
     font-size: 3rem;
 	font-weight:bold;
@@ -235,7 +235,7 @@ a #title_img {
 	color: #47082C;
 }
 #copyright small{
-	font-family: "Kunstler Script", cursive;
+	font-family: "Kunstler Script", "Brush Script MT", cursive;
 	color: #47082C;
 	font-size:1.5rem;
 	font-weight:bold;
