--- a/css_total.css
+++ b/css_total.css
@@ -1,7 +1,7 @@
 *{
 	background:seashell; /*floralwhite snow */
 	color:#47082C;
-    	font-family: Garamond, Courier;
+    	font-family: Garamond;
 	
 }
 body{
